[workspace]
resolver = "2"

members = [   
    "contract",
    "deployer"
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "0.6.0"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "754c43bd87fe3fd69773ab5e3dc9cbe5a4852c37"

[workspace.dependencies.soroban-auth]
version = "0.6.0"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "754c43bd87fe3fd69773ab5e3dc9cbe5a4852c37"